Refactor (to inspect)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,13 +6,13 @@
         "EVENTS" : "Events",
         "SPORTS" : "Sports",
         "STUDIES" : "Studies",
-        "LIBRARY" : "Libraries",
-        "HELP" : "Support",
-        "PARTY" : "Guindaille2.0",
+        "LIBRARIES" : "Libraries",
+        "SUPPORT" : "Support",
+        "GUINDAILLE" : "Guindaille2.0",
         "MAP" : "Map",
-        "RESTAURANT" : "Resto 4U",
+        "RESTO" : "Resto 4U",
         "MOBILITY" : "Mobility",
-        "PARAM" : "Settings",
+        "SETTINGS" : "Settings",
         "URG" : "Urgency",
         "CREDITS" : "Credits"
     },
