--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,13 +5,13 @@
 		"EVENTS" : "Evénements",
 		"SPORTS" : "Sports",
 		"STUDIES" : "Etudes",
-		"LIBRARY" : "Bibliothèques",
-		"HELP" : "Support",
-		"PARTY" : "Guindaille2.0",
+		"LIBRARIES" : "Bibliothèques",
+		"SUPPORT" : "Support",
+		"GUINDAILLE" : "Guindaille2.0",
 		"MAP" : "Carte",
-		"RESTAURANT" : "Resto 4U",
+		"RESTO" : "Resto 4U",
 		"MOBILITY" : "Mobilité",
-		"PARAM" : "Paramètres",
+		"SETTINGS" : "Paramètres",
 		"URG" : "Urgence",
 		"CREDITS" : "Crédits"
 	},
