--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -101,7 +101,8 @@
         "WARNING": "Avertissement",
         "MESSAGE3": "En cas de changement ou problème, ce rappel ne sera pas modifié.<br> Tout changement éventuel sera visible au prochain lancement de l'application.",
         "NO": "Pas de cours",
-        "SHOW": "Afficher les programmes"
+        "SHOW": "Afficher les programmes",
+        "HIDE": "Cacher les programmes"
     },
 
     "MODAL": {
