--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -357,7 +357,7 @@
     "GUINDAILLE": {
         "PICTO": "Pictograms",
         "EFFECT": "Effectomètre",
-        "SLIDE": "Swipe to the right to continue",
+        "SLIDE": "Swipe to the left to continue",
 
         "HELP": "Emergency",
         "HELP1": "Emergency UCLouvain",
