--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -356,7 +356,7 @@
     "GUINDAILLE": {
         "PICTO": "Pictogrammes",
         "EFFECT": "Effectomètre",
-        "SLIDE": "Glisser vers la droite pour continuer",
+        "SLIDE": "Glisser vers la gauche pour continuer",
 
         "HELP": "Urgences",
         "HELP1": "Urgences UCLouvain",
