add directions button in popup content

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -300,7 +300,8 @@
         "REST": "University restaurants",
         "PARK": "Parkings",
         "SERV": "Services",
-        "SPORT": "Places of sports activities"
+        "SPORT": "Places of sports activities",
+        "DIRECTIONS": "Directions"
     },
 
     "REST": {
